fixes horizontal scroll of token set items mentioned in #87

--- a/src/app/styles/tailwind.css
+++ b/src/app/styles/tailwind.css
@@ -88,14 +88,17 @@ body {
 }
 
 body::-webkit-scrollbar,
-.overflow-x-auto::-webkit-scrollbar,
 .ReactModal__Content::-webkit-scrollbar,
 textarea::-webkit-scrollbar {
     width: 9px;
 }
 
+.overflow-x-auto::-webkit-scrollbar {
+    height: 9px;
+}
+
 body::-webkit-scrollbar-thumb,
-.auto::-webkit-scrollbar-thumb,
+.overflow-x-auto::-webkit-scrollbar-thumb,
 .ReactModal__Content::-webkit-scrollbar-thumb,
 textarea::-webkit-scrollbar-thumb {
     @apply bg-gray-400;
